<resources>
    <string name="app_name">GameDB</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">GameDB</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_favorites">Favorites</string>
    <string name="search">Search</string>
    <string name="companies">Companies</string>
    <string name="franchises">Franchises</string>
    <string name="pages">Pages</string>
    <string name="reviews">Reviews</string>
    <string name="themes">Themes</string>
    <string name="action">Action</string>
    <string name="historical">Historical</string>
    <string name="horror">Horror</string>
    <string name="drama">Drama</string>
    <string name="mystery">Mystery</string>
    <string name="game_modes">Game Modes</string>
    <string name="single_player">Single player</string>
    <string name="multiplayers">Multiplayers</string>
    <string name="company_name">Company Name</string>
    <string name="company_game">Company Game</string>
    <string name="franchise_name">Franchise name</string>
    <string name="visit">Visit</string>
    <string name="page_name">Page Name</string>
    <string name="game_name">Game name</string>
    <string name="release_date">Release Date</string>
    <string name="reviewer_name">Reviewed by: </string>
    <string name="description_conclusion">Description conclusion</string>
    <string name="description_content">Description content</string>
    <string name="description">Description</string>
    <string name="summery_content">Summery Content</string>
    <string name="summery">Summery</string>
    <string name="recommended_games">Recommended Games</string>
    <string name="developers">Developers: </string>
    <string name="publisher">Publisher: </string>
    <string name="search_hint">Search..</string>
    <string name="profile">profile</string>
    <string name="notification_add_to_cart_button">Like</string>
    <string name="notifications_admin_channel_name">Global channel</string>
    <string name="notifications_admin_channel_description">Notifications sent from the app admin</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="share_description">Share the game</string>
    <string name="rate_description">Game rating</string>
    <string name="page_not_found">Page not found</string>
    <string name="game_cover">Game Cover</string>
    <string name="favorite">Add to favorites</string>
    <string name="expand_down">Expand down</string>
    <string name="expand_up">Expand Up</string>
    <string name="game_screenshots">Game Screenshots</string>
    <string name="page_logo">Page logo</string>
    <string name="youtube">Youtube channel</string>
</resources>
