<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="3dp"
    android:id="@+id/review_cardView">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/review_game_imageview"
            android:layout_width="128dp"
            android:layout_height="133dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/review_game_name_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="36dp"
            android:text="@string/game_name"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            app:layout_constraintStart_toEndOf="@+id/review_game_imageview"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/reviewer_name_textview"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:text="@string/reviewer_name"
            android:textSize="15sp"
            app:layout_constraintStart_toEndOf="@+id/review_game_imageview"
            app:layout_constraintTop_toBottomOf="@+id/review_game_name_textView" />

        <com.example.l.gamedb.view.ExpandableTextView
            android:id="@+id/review_content_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginStart="8dp"
            android:text="@string/description_content"
            android:textSize="15sp"
            app:layout_constraintStart_toStartOf="@id/review_game_imageview"
            app:layout_constraintTop_toBottomOf="@+id/review_game_imageview" />

        <RatingBar
            android:id="@+id/reviewRatingBar"
            android:layout_width="194dp"
            android:layout_height="29dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:progressTint="@color/colorAccent"
            style="?android:attr/ratingBarStyleSmall"
            app:layout_constraintStart_toEndOf="@+id/review_game_imageview"
            app:layout_constraintTop_toBottomOf="@+id/reviewer_name_textview" />

    </android.support.constraint.ConstraintLayout>

</android.support.v7.widget.CardView>